--- a/principal.css
+++ b/principal.css
@@ -1,91 +1,3 @@
-*, *::before, *::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+*, *::before, *::after{ margin: 0; padding: 0; box-sizing: border-box; } img{ width: 100%; height: 100%; object-fit: cover; } .galeria{ width: 80%; max-width: 1200px; margin-left: auto; margin-right: auto; display: grid; grid-template-columns: repeat(auto-fit, 128px); grid-auto-rows:200px; justify-content:center; gap: 1rem; min-height: 1000px; } .galeria_item{ clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%); grid-column: span 2; height: 283px; transition: 0.5s filter; } .galeria_item:hover{ filter: brightness(0.3); } .galeria_item:first-of-type{ grid-column: 2 / span 2; } /* MEDIDAS */ @media screen and (min-width: 270px) and (max-width: 504px){ .galeria_item:first-of-type{ grid-column: 1 / span 2; } .galeria{ grid-auto-rows: 283px; } } @media screen and (min-width: 505px) and (max-width:685px){ .galeria_item:nth-of-type(odd){ grid-column: 2 / span 2; } } @media screen and (min-width: 686px) and (max-width:862px){ .galeria_item:nth-of-type(3n + 1){ grid-column: 2 / span 2; } } @media screen and (min-width: 863px) and (max-width:1038px){ .galeria_item:nth-of-type(4n + 1){ grid-column: 2 / span 2; } } @media screen and (min-width: 1039px) and (max-width:1215px){ .galeria_item:nth-of-type(5n + 1){ grid-column: 2 / span 2; } } @media screen and (min-width: 1216px) and (max-width:1390px){ .galeria_item:nth-of-type(6n + 1){ grid-column: 2 / span 2; } } @media screen and (min-width: 1391px){ .galeria_item:nth-of-type(7n + 1){ grid-column: 2 / span 2; } }
 
-body{
-    background: #000; /* FONDO NEGRO */
-}
-
-img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.galeria{
-    width: 80%;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;    
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 128px);
-    grid-auto-rows:200px;
-    justify-content:center;
-    gap: 1rem;
-    min-height: 1000px;
-    /* background: #000;  OPCIONAL, por si quieres solo el área en negro */
-}
-
-.galeria_item{
-    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-    grid-column: span 2;
-    height: 283px;
-    transition: 0.5s filter;
-}
-
-.galeria_item:hover{
-    filter: brightness(0.3);
-}
-
-.galeria_item:first-of-type{
-    grid-column: 2 / span 2;
-}
-
-/* MEDIDAS */
-@media screen and (min-width: 270px) and (max-width: 504px){
-    .galeria_item:first-of-type{
-        grid-column: 1 / span 2;
-    }
-    .galeria{
-        grid-auto-rows: 283px;
-    }    
-}
-
-@media screen and (min-width: 505px) and (max-width:685px){
-    .galeria_item:nth-of-type(odd){
-       grid-column: 2 / span 2;
-    }
-}
-
-@media screen and (min-width: 686px) and (max-width:862px){
-    .galeria_item:nth-of-type(3n + 1){
-       grid-column: 2 / span 2;
-    }
-}
-
-@media screen and (min-width: 863px) and (max-width:1038px){
-    .galeria_item:nth-of-type(4n + 1){
-       grid-column: 2 / span 2;
-    }
-}
-
-@media screen and (min-width: 1039px) and (max-width:1215px){
-    .galeria_item:nth-of-type(5n + 1){
-       grid-column: 2 / span 2;
-    }
-}
-
-@media screen and (min-width: 1216px) and (max-width:1390px){
-    .galeria_item:nth-of-type(6n + 1){
-       grid-column: 2 / span 2;
-    }
-}
-
-@media screen and (min-width: 1391px){
-    .galeria_item:nth-of-type(7n + 1){
-       grid-column: 2 / span 2;
-    }
-}
 
